# tossd

./: Cargo.toml  README.md  build.rs
migration/src/: lib.rs  m20231019_072332_add_agreement_table.rs  m20231019_073111_add_agreement_versions_table.rs  m20231019_082748_add_generate_agreement_acceptance_statuses.rs  m20231022_091141_add_acceptance_unique_index.rs
proto/: agreements.proto
src/: db.rs  main.rs
src/models/: acceptance.rs  agreement.rs  agreement_acceptance_status.rs  agreement_acceptances.rs  agreement_versions.rs  agreements.rs  mod.rs  prelude.rs
src/repository/: agreements.rs  mod.rs
src/services/: agreements.rs  mod.rs
