[package]
name = "tossd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the HelloWorld gRPC server
name = "tossd-server"
path = "src/main.rs"

[dependencies]
tonic = "0.10"
prost = { version = "0.12" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = { version = "0.10.0", features = [] }
log = "0.4.20"

[build-dependencies]
tonic-build = "0.10"
