[package]
name = "tossd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the HelloWorld gRPC server
name = "tossd-server"
path = "src/main.rs"

[dependencies]
tonic = "0.10"
prost = { version = "0.12" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = { version = "0.10.0", features = [] }
log = "0.4.20"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
sea-orm = { version = "0.12", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = { version = "0.12" }

[build-dependencies]
tonic-build = "0.10"
